@@ -2008,6 +2008,9 @@ static int StringValue(int c, Rboolean forSymbol)
 		    xxungetc(c);
 		    CTEXT_POP();
 		}
+		if (!octal)
+		    error(_("nul character not allowed (line %d)"), 
+                          ps->sr->xxlineno);
 		c = octal;
 		oct_or_hex = TRUE;
 	    }
@@ -2031,6 +2034,9 @@ static int StringValue(int c, Rboolean forSymbol)
 		    }
 		    val = 16*val + ext;
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"), 
+                          ps->sr->xxlineno);
 		c = val;
 		oct_or_hex = TRUE;
 	    }
@@ -2070,6 +2076,9 @@ static int StringValue(int c, Rboolean forSymbol)
 			      ps->sr->xxlineno);
 		    else CTEXT_PUSH(c);
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"),
+                          ps->sr->xxlineno);
 		WTEXT_PUSH(val); /* this assumes wchar_t is Unicode */
 		use_wcs = TRUE;
 		continue;
@@ -2109,6 +2118,9 @@ static int StringValue(int c, Rboolean forSymbol)
                               ps->sr->xxlineno);
 		    else CTEXT_PUSH(c);
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"),
+                          ps->sr->xxlineno);		
 		WTEXT_PUSH(val);
 		use_wcs = TRUE;
 		continue;
